Rework Sort appfilter
cleaner code
faster better formatting
combines groups with same comment